--- a/MyTrade/Views/User/EPinRequest.cshtml
+++ b/MyTrade/Views/User/EPinRequest.cshtml
@@ -21,68 +21,125 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="widget-content widget-content-area">
+                        <div class="row mb-4">
+                            <div class="col-md-4">
+                                <label for="Package">Login Id</label>
+                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "LoginId", @disabled = "disabled" })
+                                <p class="text-success" id="spName"></p>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="Package">Package</label>
+                                @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control", @onchange = "FillAmount();" })
+                                <p class="text-success" id="spName"></p>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="Amount">Amount</label>
+                                @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Amount", @disabled = "disabled" })
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="col-md-4">
+                                <label for="NoofPins">No of Pins</label>
+                                @Html.TextBoxFor(m => m.NoofPins, new { @class = "form-control", @placeholder = "No of Pins", @onchange = "getfinalamount();", @onkeypress = "return isNumberKey(event);" })
+                            </div>
+                            <div class="col-md-4">
+                                <label for="FinalAmount">Final Amount</label>
+                                @Html.TextBoxFor(m => m.FinalAmount, new { @class = "form-control", @placeholder = "Final Amount", @disabled = "disabled" })
+                            </div>
+                            <div class="col-md-4">
+                                <label for="Fk_Paymentid">Payment Mode</label>
+                                @Html.DropDownListFor(m => m.Fk_Paymentid, new SelectList(ViewBag.ddlPayment, "Value", "Text"), new { @class = "form-control", @onchange = "return CheckPayMode();" })
+                            </div>
+                        </div>
+                        <div class="row mb-4" style="display:none" id="divPaymentMode">
+                            <div class="col-md-3" id="divtransactiono">
+                                <label for="TransactionNo" id="lbltno">Transaction No</label>
+                                @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "TransactionNo", })
+                            </div>
+                            <div class="col-md-3" id="divtrdate">
+                                <label for="TransactionDate" id="lbltdate">TransactionDate</label>
+                                @Html.TextBoxFor(m => m.TransactionDate, new { @class = "form-control", @placeholder = "Transaction Date" })
+                            </div>
+                            <div class="col-md-3" id="divbankname">
+                                <label for="BankName" id="lblbank">Bank Name</label>
+                                @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name", })
+                            </div>
+                            <div class="col-md-3" id="divbankbranch">
+                                <label for="BranchName" id="lbltbranch">Branch Name</label>
+                                @Html.TextBoxFor(m => m.BranchName, new { @class = "form-control", @placeholder = "Branch Name" })
+                            </div>
+                        </div>
+                        <input class="btn btn-success pull-left" type="submit" value="Request Pin" id="btnsave" name="btnsave" onclick="return validateform();" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row layout-top-spacing">
+            <div class="col-lg-12 col-12 layout-spacing">
+                <div class="statbox widget box box-shadow">
+                    <div class="widget-header">
                         <div class="row">
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label>Package</label>
-                                    @Html.DropDownListFor(m => m.Package, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control", @onchange = "FillAmount();" })
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="Amount">Amount</label>
-                                    @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Amount", @disabled = "disabled" })
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group ">
-                                    <label for="NoofPins">No of Pins</label>
-                                    @Html.TextBoxFor(m => m.NoofPins, new { @class = "form-control", @placeholder = "No of Pins", @onchange = "getfinalamount();", @onkeypress = "return isNumberKey(event);" })
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="FinalAmount">Final Amount</label>
-                                    @Html.TextBoxFor(m => m.FinalAmount, new { @class = "form-control", @placeholder = "Final Amount", @readonly=true })
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="Fk_Paymentid">Payment Mode</label>
-
-                                    @Html.DropDownListFor(m => m.Fk_Paymentid, new SelectList(ViewBag.ddlPayment, "Value", "Text"), new { @class = "form-control", @onchange = "return CheckPayMode();" })
-                                </div>
-                            </div>
-
-
-                            <div class="row mb-4" style="display:none" id="divPaymentMode">
-                                <div class="col-md-3" id="divtransactiono">
-                                    <label for="TransactionNo" id="lbltno">Transaction No</label>
-                                    @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "TransactionNo", })
-                                </div>
-                                <div class="col-md-3" id="divtrdate">
-                                    <label for="TransactionDate" id="lbltdate">TransactionDate</label>
-                                    @Html.TextBoxFor(m => m.TransactionDate, new { @class = "form-control", @placeholder = "Transaction Date",@readonly=true })
-                                </div>
-                                <div class="col-md-3" id="divbankname">
-                                    <label for="BankName" id="lblbank">Bank Name</label>
-                                    @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name", })
-                                </div>
-                                <div class="col-md-3" id="divbankbranch">
-                                    <label for="BranchName" id="lbltbranch">Branch Name</label>
-                                    @Html.TextBoxFor(m => m.BranchName, new { @class = "form-control", @placeholder = "Branch Name" })
-                                </div>
-                            </div>
-
-                            <div class="col-md-4">
-                                <div class="form-group">
-                                    <input class="btn btn-success pull-left" type="submit" value="Request Pin" id="btnsave" name="btnsave" onclick="return validate();" />
-                                </div>
+                            <div class="col-xl-12 col-md-12 col-sm-12 col-12">
+                                <h4>E_Pin Request List</h4>
+                                <span class="text-danger">
+                                    @TempData["msg"]
+                                </span>
                             </div>
                         </div>
                     </div>
-
+                    <div class="widget-content widget-content-area br-6">
+                        <table id="html5-extension" class="table table-hover non-hover">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Name</th>
+                                    <th>Login Id</th>
+                                    @*<th>Package</th>*@
+                                    <th>Product Name</th>
+                                    <th>Amount</th>
+                                    @*<th>No Of Pins</th>*@
+                                    @*<th>Final Amount</th>*@
+                                    <th>Payment Mode</th>
+                                    <th>Bank Name</th>
+                                    <th>Bank Branch</th>
+                                    <th>Cheque DDNo</th>
+                                    <th>Cheque DD Date</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstEpinRequest != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lstEpinRequest)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.Name</td>
+                                                <td>@Item.LoginId</td>
+                                                @*<td>@Item.Package</td>*@
+                                                <td>@Item.ProductName</td>
+                                                <td>@Item.Amount</td>
+                                                @*<td>@Item.NoofPins</td>
+                                                <td>@Item.FinalAmount</td>*@
+                                                <td>@Item.Fk_Paymentid</td>
+                                                <td>@Item.BankName</td>
+                                                <td>@Item.BankBranch</td>
+                                                <td>@Item.TransactionNo</td>
+                                                <td>@Item.TransactionDate</td>
+                                                <td><a href="/User/DeleteEPinRequest?Id=@Item.PK_RequestID" class="btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to delete this e_pin request ?') ">Delete</a></td>
+                                            </tr>
+                                            i++;
+                                        }
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
@@ -118,9 +175,9 @@
 
     function validateform() {
         $(".errortext").removeClass("errortext");
-        if ($('#LoginId').val() == '') {
-            $("#LoginId").addClass('errortext');
-            $('#LoginId').focus();
+        if ($('#Package').val() == '0') {
+            $("#Package").addClass('errortext');
+            $('#Package').focus();
             return false;
         }
         if ($('#Amount').val() == '') {
@@ -139,7 +196,7 @@
             return false;
         }
         if ($('#Fk_Paymentid').val() == '0') {
-            $('#Fk_Paymentid').addClass('errrortext');
+            $('#Fk_Paymentid').addClass('errortext');
             $('#Fk_Paymentid').focus();
             return false;
         }
