--- a/MyTrade/Views/Home/Registration.cshtml
+++ b/MyTrade/Views/Home/Registration.cshtml
@@ -161,7 +161,7 @@
                                     @*<button type="submit" class="btn btn-primary">Sign Up</button>*@
 
                                     <div class="forgot-password d-flex justify-content-between mt-2">
-                                        <a href="index.html">Back To Home</a>
+                                        <a href="/Home/Index">Back To Home</a>
                                         <a href="/Home/Login">Back To Login</a>
                                     </div>
 
