--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -63,7 +63,12 @@
                 padding-left: 33px;
             }
         }
-        
+
+        @@media(max-width: 991px) {
+           .sidebar-wrapper .sidebar-theme {
+                background-image: linear-gradient(180deg, #22396c, #8d2d5a, #910f10);
+            }
+        }
     </style>
     <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 </head>
