--- a/MyTrade/assets/css/structure.css
+++ b/MyTrade/assets/css/structure.css
@@ -843,6 +843,12 @@ code { color: #e7515a; }
     left: 0px;
 }
 .sidebar-theme { background-image: linear-gradient(180deg, #22396c, #8d2d5a, #910f10);}
+@media (max-width: 991px){
+    .sidebar-wrapper .sidebar-theme {
+    background-image: linear-gradient(180deg, #22396c, #8d2d5a, #910f10);
+}
+}
+
 .sidebar-closed.main-container { padding: 0; }
 .sidebar-closed > .sidebar-wrapper { left: -270px; }
 .sidebar-closed > #content { margin-left: 0; }
@@ -1178,7 +1184,7 @@ code { color: #e7515a; }
         backface-visibility: hidden;
         -webkit-backface-visibility: hidden;
         -webkit-transform: translate3d(0, 0, 0);
-        background: #f1f2f3;
+        /*background: #f1f2f3;*/
     }
     .footer-wrapper {
         padding: 6px 16px 9px 16px;
