--- a/MyTrade/Views/AdminReports/ViewProfileForAdmin.cshtml
+++ b/MyTrade/Views/AdminReports/ViewProfileForAdmin.cshtml
@@ -163,6 +163,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <input class="btn btn-success" type="submit" value="Update" id="Update" name="Update" />
+                                    <a href="/AdminReports/ViewProfile?Id=@Model.Fk_UserId" class="btn btn-info">Back To Profile</a>
                                 </div>
                             </div>
                         </div>
