--- a/MyTrade/Views/Shared/_Layout.cshtml
+++ b/MyTrade/Views/Shared/_Layout.cshtml
@@ -30,6 +30,11 @@
         }
     </style>
     <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
+
+    <link href="~/assets/css/user-profile.css" rel="stylesheet" type="text/css" />
+
+    <link href="~/assets/css/user-profile.css" rel="stylesheet" />
+
 </head>
 <body>
     <!-- BEGIN LOADER -->
