--- a/MyTrade/Views/AdminReports/AssociateList.cshtml
+++ b/MyTrade/Views/AdminReports/AssociateList.cshtml
@@ -117,7 +117,7 @@
                                                     <td>@Item.JoiningDate</td>
                                                     <td>@Item.Mobile</td>
                                                     <td>@Item.Email</td>
-                                                    <td><a href="/AdminReports/ViewProfileForAdmin?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">Edit</a>
+                                                    <td><a href="/AdminReports/ViewProfile?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a>
                                                         <a href="/AdminReports/DeleteUerDetails?Id=@Item.Fk_UserId" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this user ?');">Delete</a>
                                                         
                                                     </td>
