--- a/MyTrade/Views/AdminReports/ViewProfile.cshtml
+++ b/MyTrade/Views/AdminReports/ViewProfile.cshtml
@@ -187,5 +187,15 @@
             </div>
         </div>
     </div>
-</div>
+    <div class="row">
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
+        <a href="/AdminReports/ViewProfileVeriFy?Id=@Model.Fk_UserId" name="Verify" id="Verify" class="btn btn-success">Verify</a><br /><br />
+            <p style="color:red;">@TempData["verify"]</p>
+        </div>
+        <div class="col-sm-4">
+        </div>
+    </div>
+    </div>
 }
