--- a/MyTrade/Views/User/ViewProfile.cshtml
+++ b/MyTrade/Views/User/ViewProfile.cshtml
@@ -96,7 +96,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="btn btn-primary" href="javascript:void(0)" onclick="OpenProfile();">Edit Profile</a>
+                                    @*<a class="btn btn-primary" href="javascript:void(0)" onclick="OpenProfile();">Edit Profile</a>*@
                                 </div>
 
                             </form>
