--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -122,14 +122,14 @@
                 </li>
                 <li class="nav-item dropdown user-profile-dropdown">
                     <a href="javascript:void(0);" class="nav-link dropdown-toggle user" id="userProfileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                        @*@if (Session["Profile"].ToString() != "")
+                        @if (Session["Profile"].ToString() != "")
                         {
                             <img src="@Session["Profile"]" alt="@Session["FullName"]" height="60px" width="60px">
                         }
                         else
                         {
                             <img src="/assets/img/usericon.jpg" alt="@Session["FullName"]" height="60px" width="60px">
-                        }*@
+                        }
                     </a>
                     <div class="dropdown-menu position-absolute" aria-labelledby="userProfileDropdown">
                         <div class="">
