--- a/MyTrade/Views/User/PinTransferReport.cshtml
+++ b/MyTrade/Views/User/PinTransferReport.cshtml
@@ -57,7 +57,7 @@
 
                                     </div>
                                     <div class="table-responsive">
-                                        <table class="table table-bordered w-100 mb-0" id="example25">
+                                        <table class="table table-bordered w-100 mb-0" id="html5-extension">
                                             <thead>
                                                 <tr>
 
