--- a/MyTrade/Views/User/TopUp.cshtml
+++ b/MyTrade/Views/User/TopUp.cshtml
@@ -31,29 +31,47 @@
                             }
                         </div>
                         <div class="row mb-4">
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <label for="LoginId">LoginId</label>
                                 @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id", @disabled = "disabled" })
                                 <p class="text-success" id="spName"></p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <label for="Package">Package <span style="color:red">*</span></label>
                                 @Html.DropDownListFor(m => m.PackageId, new SelectList(ViewBag.ddlProduct, "Value", "Text"), new { @class = "form-control" })
                                 <p class="text-success" id="spName"></p>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <input type="hidden" id="WalletAmount" value="@ViewBag.WalletBalance" />
                                 <label for="Amount">Amount <span style="color:red">*</span></label>
                                 @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Amount", @onkeypress = "return isNumberKey(event);", @onchange = "return CheckAmount();" })
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <label for="Mode">Mode<span style="color:red">*</span></label>
-                                @Html.DropDownListFor(m => m.PaymentMode, new SelectList(ViewBag.ddlpaymentmode, "Value", "Text"), new { @class = "form-control", @onchange = "getpaymentdetails();" })
+                                @Html.DropDownListFor(m => m.PaymentMode, new SelectList(ViewBag.ddlpaymentmode, "Value", "Text"), new { @class = "form-control", @onchange = "return CheckPayMode();" })
                             </div>
-                            <div class="col-md-4">
-                                <br />
-                                <input class="btn btn-success" name="btn_Pin" id="btn_Pin" type="submit" value="Submit" onclick="return ValidateForm();" />
+                        </div>
+                        <div class="row mb-4" style="display:none" id="divPaymentMode">
+                            <div class="col-md-3" id="divbankname">
+                                <label for="BankName" id="lblbank">Bank Name</label>
+                                @Html.TextBoxFor(m => m.BankName, new { @class = "form-control", @placeholder = "Bank Name", })
                             </div>
+                            <div class="col-md-3" id="divbankbranch">
+                                <label for="BranchName" id="lbltbranch">Branch Name</label>
+                                @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control", @placeholder = "Branch Name" })
+                            </div>
+                            <div class="col-md-3" id="divtransactiono">
+                                <label for="TransactionNo" id="lbltno">Transaction No</label>
+                                @Html.TextBoxFor(m => m.TransactionNo, new { @class = "form-control", @placeholder = "TransactionNo", })
+                            </div>
+                            <div class="col-md-3" id="divtrdate">
+                                <label for="TransactionDate" id="lbltdate">TransactionDate</label>
+                                @Html.TextBoxFor(m => m.TransactionDate, new { @class = "form-control", @placeholder = "Transaction Date" })
+                            </div>
+
+                        </div>
+                        <div class="col-md-4">
+                            <input class="btn btn-success" name="btn_Pin" id="btn_Pin" type="submit" value="Submit" onclick="return ValidateForm();" />
                         </div>
                         <div class="row mb-4">
                             <div class="col-md-12">
@@ -71,14 +89,10 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
 <script>
-    //$(function () {
-    //    $('#TopUpDate').datepicker({
-    //        dateFormat: 'dd/mm/yy',
-    //    });
-    //    $('#TransactionDate').datepicker({
-    //        dateFormat: 'dd/mm/yy',
-    //    });
-    //});
+    $('#TransactionDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+    });
+
     //$(function () {
     //    var $j = jQuery.noConflict();
     //    $("#TopUpDate").datepicker({
@@ -142,6 +156,28 @@
             return false;
         }
         return true;
+    }
+    function CheckPayMode() {
+        debugger;
+       if ($('#PaymentMode').val() == '11') {
+            $('#lbltno').html('Transaction No.');
+            $('#lbltdate').html('Transaction Date');
+            $("#divtrdate").show();
+            $("#divPaymentMode").show();
+            $("#divtransactiono").show();
+            $("#divbankname").show();
+            $("#divbankbranch").show();
+            $("#TransactionNo").attr("placeholder", "Transaction No.");
+            $("#TransactionDate").attr("placeholder", "Transaction Date");
+        }
+        else {
+            $("#divPaymentMode").hide();
+            $("#divtransactiono").hide();
+            $("#divbankname").hide();
+            $("#divbankbranch").hide();
+            $("#divtrdate").hide();
+        }
+
     }
 </script>
 
