--- a/MyTrade/Views/Wallet/AddWallet.cshtml
+++ b/MyTrade/Views/Wallet/AddWallet.cshtml
@@ -14,10 +14,10 @@
                     <div class="widget-header">
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>Wallet Request</h4>
-                                <span class="text-danger">
+                                <h4>Recharge Wallet</h4>
+                                @*<span class="text-danger">
                                     @TempData["Wallet"]
-                                </span>
+                                </span>*@
                             </div>
                         </div>
                     </div>
@@ -56,6 +56,15 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-md-3 form-it" id="bankbranch" style="display: none">
+                                <div class="form-group row">
+                                    <div class="col-sm-9">
+                                        <label>  Branch <span style="color: red">*</span></label>
+                                        @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control", @placeholder = "Bank Branch" })
+                                        <br />
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-md-3 form-it" id="chequeno" style="display: none">
                                 <div class="form-group row">
                                     <div class="col-sm-9">
@@ -72,15 +81,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 form-it" id="bankbranch" style="display: none">
-                                <div class="form-group row">
-                                    <div class="col-sm-9">
-                                        <label>  Branch <span style="color: red">*</span></label>
-                                        @Html.TextBoxFor(m => m.BankBranch, new { @class = "form-control", @placeholder = "Bank Branch" })
-                                        <br />
-                                    </div>
-                                </div>
-                            </div>
+                           
                         </div>
                         <div class="row">
                             <div class="col-md-12">
@@ -217,6 +218,32 @@
 
 
 </script>
+@if (TempData["msg"] != null)
+{
+    <script>
+        $(document).ready(function () {
+            Snackbar.show({
+                text: '@TempData["msg"]',
+                actionTextColor: '#fff',
+                backgroundColor: '#1abc9c',
+                pos: 'top-right'
+            });
+        });
+    </script>
+}
+@if (TempData["error"] != null)
+{
+    <script>
+        $(document).ready(function () {
+            Snackbar.show({
+                text: '@TempData["error"]',
+                actionTextColor: '#fff',
+                backgroundColor: '#e7515a',
+                pos: 'top-right'
+            });
+        });
+    </script>
+}
 <style>
     .errortext {
         border: 1px solid red !important;
