--- a/MyTrade/Views/Home/emailtemplate.cshtml
+++ b/MyTrade/Views/Home/emailtemplate.cshtml
@@ -10,15 +10,13 @@
         height: 100%;
         background-color: #f1f1f1;
         position: relative;
-        /*float: left;
-        background-size: cover;*/
     }
     .wlc-img {
     margin-top: -100px;
 }
     
     .ribbon3 {
-    width: 792px;
+    width: 97%;
     height: 50px;
     line-height: 50px;
     padding-left: 15px;
@@ -70,14 +68,14 @@ h3.wcm-name {
     }
 
     .ribbon4 {
-    width: 800px;
+    width: 100%;
     height: 150px;
     padding-left: 15px;
     position: absolute;
     bottom: 0px;
     background: #910f10;
     text-align: center;
-    padding: 15px 0 0 20px;
+    padding: 15px 10px 0 10px;
 }
     h2.footer-text{
         font-weight: 500;
@@ -93,6 +91,11 @@ h3.wcm-name {
 }
     .footer-icon{
         font-size: 40px;
+    }
+    @@media only screen and (max-width: 384px){
+        .ribbon4 {
+            height: 200px;
+        }
     }
 </style>
 
