Changes in Reports

--- a/MyTrade/Views/Report/PayoutDetail.cshtml
+++ b/MyTrade/Views/Report/PayoutDetail.cshtml
@@ -52,10 +52,11 @@
                                         <th>Sr No.</th>
                                         <th>Closing Date</th>
                                         <th>Payout No</th>
-                                        <th>Level Income Tr1</th>
-                                        <th>Level Income Tr2</th>
+                                        <th>Level Income TTP</th>
+                                        <th>Level Income TPS</th>
                                         <th>Gross Amount</th>
                                         <th>TDS Amount</th>
+                                        <th>Processing Fee</th>
                                         <th>Net Amount</th>
                                     </tr>
                                 </thead>
@@ -75,6 +76,7 @@
                                                     <td>@Item.LevelIncomeTR2</td>
                                                     <td>@Item.GrossAmount</td>
                                                     <td>@Item.TDSAmount</td>
+                                                    <td>@Item.ProcessingFee</td>
                                                     <td>@Item.NetAmount</td>
                                                 </tr>
                                                 i++;
