--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -252,8 +252,12 @@
                                 <a href="/Downline/DirectList">Direct</a>
                             </li>
                             <li>
-                                <a href="/user/Tree">Level Tree</a>
+                                <a href="/user/TreeTTP">Level Tree TTP</a>
                             </li>
+                            <li>
+                                <a href="/user/Tree">Level Tree TPS</a>
+                            </li>
+                           
                             <li>
                                 <a href="/Downline/AssociateTree">Downteam Tree</a>
                             </li>
