--- a/MyTrade/Views/Downline/DirectList.cshtml
+++ b/MyTrade/Views/Downline/DirectList.cshtml
@@ -62,7 +62,7 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="table-responsive">
-                            <table class="table mb-0" id="example23">
+                            <table class="table table-hover non-hover" data-page-length='10' id="html5-extension">
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
@@ -71,7 +71,7 @@
                                         <th>Mobile No</th>
                                         <th>Email Id</th>
                                         @*<th>Leg</th>*@
-                                        <th>Joining Date</th>
+                                        @*<th>Joining Date</th>*@
                                         <th>Package</th>
                                         <th>Activation Date</th>
                                         <th>Status</th>
@@ -94,7 +94,7 @@
                                                     <td>@Item.Mobile</td>
                                                     <td>@Item.Email</td>
                                                     @*<td>@Item.Leg</td>*@
-                                                    <td>@Item.JoiningDate</td>
+                                                    @*<td>@Item.JoiningDate</td>*@
                                                     <td>@Item.Package</td>
                                                     <td>@Item.PermanentDate</td>
                                                     <td>@Item.Status</td>
@@ -119,7 +119,6 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
 <script>
-
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
     });
