--- a/MyTrade/Views/Report/LevelIncomeTr1.cshtml
+++ b/MyTrade/Views/Report/LevelIncomeTr1.cshtml
@@ -48,8 +48,10 @@
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
+                                        <th>Payout No</th>
                                         <th>From Member</th>
                                         <th>Business Amount</th>
+                                        <th>Percentage</th>
                                         <th>Income</th>
                                         <th>Level</th>
                                         <th>Transaction Date</th>
@@ -65,8 +67,10 @@
                                             {
                                                 <tr class="text-left">
                                                     <td>@i</td>
+                                                    <td>@Item.PayoutNo</td>
                                                     <td>@Item.FromName (@Item.FromLoginId)</td>
                                                     <td>@Item.BusinessAmount</td>
+                                                    <td>@Item.Percentage</td>
                                                     <td>@Item.Amount</td>
                                                     <td>@Item.Level</td>
                                                     <td>@Item.TransactionDate</td>
