--- a/MyTrade/Views/Report/LevelIncomeTr2.cshtml
+++ b/MyTrade/Views/Report/LevelIncomeTr2.cshtml
@@ -48,9 +48,11 @@
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
+                                        <th>Payout No</th>
                                         <th>From Member</th>
                                         <th>Business Amount</th>
                                         <th>Income</th>
+                                        <th>Percentage</th>
                                         <th>Level</th>
                                         <th>Transaction Date</th>
                                     </tr>
@@ -68,6 +70,7 @@
                                                     <td>@Item.FromName</td>
                                                     <td>@Item.BusinessAmount</td>
                                                     <td>@Item.Amount</td>
+                                                    <th>@Item.Percentage</th>
                                                     <td>@Item.Level</td>
                                                     <td>@Item.TransactionDate</td>
                                                 </tr>
