--- a/MyTrade/Views/User/PinList.cshtml
+++ b/MyTrade/Views/User/PinList.cshtml
@@ -35,7 +35,7 @@
                             <div class="col-lg-3" style="margin-top:15px;">
                                 <div class="form-group">
                                     <br />
-                                    <input type="submit" id="btnSearch" class="btn btn-success pull-left" name="Search" value="Search" />
+                                    <input type="submit" id="btnSearch" class="btn btn-success pull-left" name="btnSearch" value="Search" />
                                 </div>
                             </div>
                         </div>
@@ -321,6 +321,32 @@
     
 
 </script>
+@if (TempData["msg"] != null)
+{
+<script>
+        $(document).ready(function () {
+            Snackbar.show({
+                text: '@TempData["msg"]',
+                actionTextColor: '#fff',
+                backgroundColor: '#1abc9c',
+                pos: 'top-right'
+            });
+        });
+</script>
+}
+@if (TempData["error"] != null)
+{
+    <script>
+        $(document).ready(function () {
+            Snackbar.show({
+                text: '@TempData["error"]',
+                actionTextColor: '#fff',
+                backgroundColor: '#e7515a',
+                pos: 'top-right'
+            });
+        });
+    </script>
+}
 <style>
     .errortext {
         border: 1px solid red !important;
