--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -434,7 +434,7 @@
                 show: false,
             }
         },
-        labels: ['Active', 'InActive', 'TPS Td'],
+        labels: ['Active', 'InActive', 'TPS Id'],
         colors: ['#d7740f', '#f10909', '#168733', ],
         series: [@ViewBag.TotalActive, @ViewBag.TotalInActive, @ViewBag.TotalBlocked],
         borderColor: '#F97300',
